tests/NormalTests/paczka1/fuzzy1/25527835.err
Error in line 7: ghbylnSVmg A136 44,8
Error in line 17: ghbylnSVmg S478 57,3
Error in line 26: S621 S74 -1,7
Error in line 34: rJueMOZtK S621 44,1
Error in line 22: S621 S74 26,1
